fix styling for action section on mobile

--- a/scss/pages/_action.scss
+++ b/scss/pages/_action.scss
@@ -6,10 +6,13 @@
   .lost-pet,
   .found-pet {
     height: 358px;
+    width: 375px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-repeat: no-repeat;
     h1 {
       font-family: "Quando", serif;
       font-size: 24px;
